msvc-bp-prod-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\laura\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert -f compose.prod.yaml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: msvc-bp-prod-api
  name: msvc-bp-prod-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: msvc-bp-prod-api
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\laura\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert -f compose.prod.yaml
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: msvc-bp-prod-api
    spec:
      containers:
        - env:
            - name: DATABASE_URI
              value: mysql+mysqlconnector://root:root@msvc-bp-prod-db:3306/msvc-prod
            - name: TICKETMASTER_API_KEY
              value: o7IfhKGwIZjYxD9MQPbHvXf1JcLPn647
          image: ghcr.io/lauradubach/musiceventfinder:latest
          name: msvc-bp-prod-api
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
      imagePullSecrets:          
        - name: ghcr-secret
