msvc-bp-prod-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\laura\AppData\Local\Microsoft\WinGet\Links\kompose.exe convert -f compose.prod.yaml
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: msvc-bp-prod-db
  name: msvc-bp-prod-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: msvc-bp-prod-db
